--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signalk-cloud",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "description": "Plugin that updates and retrieves data from a SignalK cloud server",
   "main": "index.js",
   "scripts": {
@@ -9,13 +9,12 @@
   "keywords": [
     "signalk-node-server-plugin"
   ],
-  "author": {"name": "Scott Bender", "email": "scott@scottbender.net"},
+  "author": {
+    "name": "Scott Bender",
+    "email": "scott@scottbender.net"
+  },
   "contributors": [
-    {
-    }
-  ],
-  "keywords": [
-    "signalk-node-server-plugin"
+    {}
   ],
   "license": "ISC",
   "dependencies": {
