--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signalk-cloud",
-  "version": "1.4.2",
+  "version": "1.4.5",
   "description": "Plugin that updates and retrieves data from a SignalK cloud server",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "debug": "^2.2.0",
-    "ws": "^3.0.0",
-    "lodash": "^4.17.4"
+    "geolib": "^2.0.24",
+    "lodash": "^4.17.4",
+    "ws": "^3.0.0"
   },
   "repository": {
     "type": "git",
