--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "debug": "^3.1.0",
     "lodash": "^4.17.4",
     "request": "^2.83.0",
     "ws": "^3.0.0"
